<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:padding="10dip"
    android:gravity="center"
    android:layout_margin="2.5dip"
    android:layout_height="wrap_content">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_register_comment"
            android:hint="@string/what_are_your_thoughts"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="5dip">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dip"
                android:text="@string/dismiss"
                android:background="@android:color/holo_red_dark"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:background="@android:color/holo_blue_dark"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:id="@+id/btn_submit_comment"
                />

        </LinearLayout>

    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>