<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/authentication_bg"
    >

<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HouseActivity"
    android:background="@color/authentication_bg"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="200dip"
        android:layout_marginBottom="5dip"
        android:scaleType="centerCrop"
        android:id="@+id/img_house_banner"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_marginTop="5dip"
        android:layout_marginEnd="10dip"
        android:layout_marginStart="10dip"
        app:cardCornerRadius="@dimen/cardview_default_radius"
        app:cardElevation="@dimen/cardview_default_elevation">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dip"
            >

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_title"
                android:textSize="17sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"
                android:padding="5dip"
                android:id="@+id/txt_house_title"/>


            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/house_desc"
                android:textSize="15sp"
                android:textStyle="normal"
                android:maxLines="10"
                android:textColor="@android:color/black"
                android:padding="5dip"
                android:id="@+id/txt_house_description"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/email_email_dot_com"
                android:textSize="15sp"
                android:textStyle="normal"
                android:maxLines="10"
                android:textColor="@android:color/black"
                android:padding="5dip"
                android:id="@+id/txt_house_email"/>

            <com.google.android.material.button.MaterialButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorAccent"
                android:layout_marginStart="25dip"
                android:layout_marginEnd="25dip"
                android:layout_marginTop="15dip"
                android:padding="10dip"
                android:text="@string/comment_"
                android:textStyle="bold"
                android:textSize="17sp"
                android:id="@+id/btn_comment"
                />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="5dip"
        >

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/comment_section"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:layout_marginStart="5dip"
            android:textStyle="bold"
            android:layout_marginTop="5dip"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dip"
        android:padding="5dip"
        android:id="@+id/house_comment_list"/>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="15dip"
            android:src="@drawable/ic_favourite"
            android:tint="@android:color/white"
            android:id="@+id/fab_favourite"/>
        <View
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="5dip"
            android:id="@+id/snackbar_view"/>

    </FrameLayout>
</LinearLayout>
</ScrollView>