<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="50dip"
    tools:context=".AddHouse">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/house_name"
        android:layout_marginEnd="20dip"
        android:layout_marginStart="20dip"
        android:layout_marginTop="10dip">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_admin_destination_name"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Price"
        android:layout_marginEnd="20dip"
        android:layout_marginStart="20dip"
        android:layout_marginTop="15dip">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_admin_destination_price"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Description"
        android:layout_marginEnd="20dip"
        android:layout_marginStart="20dip"
        android:layout_marginTop="15dip"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edt_admin_destination_description"
            android:inputType="text"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="200dip"
        android:layout_height="200dip"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dip"
        android:id="@+id/img_destination"
        android:scaleType="centerCrop"
        android:visibility="gone"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:padding="15dip"
        android:gravity="end">
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:text="@string/select_image"
            android:padding="10dip"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="17sp"
            android:id="@+id/btn_img_destination"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            />

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="50dip"
            android:text="@string/upload"
            android:padding="10dip"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:layout_marginStart="15dip"
            android:textSize="17sp"
            android:id="@+id/btn_upload_destination"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dip"
            />

    </LinearLayout>

</LinearLayout>